# cpp_python_workflow

./: CMakeLists.txt  README.md  _clang-format
.github/workflows/: build_test_cpp_python.yml
lib/: CMakeLists.txt  lib.cpp  lib.hpp
number_lib/: CMakeLists.txt  number_lib.cpp  number_lib.hpp
pylib/: CMakeLists.txt  pylib.cpp
pynumber_lib/: CMakeLists.txt  pynumber_lib.cpp
python/cpp_python_workflow/: pynumber_lib.py
python/cpp_python_workflow/tests/: test_unit.py
tests/: CMakeLists.txt  tests.cpp
